--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-scripts": "5.0.1",
     "react-search-box": "^2.3.0",
     "redux": "^4.2.0",
+    "style-loader": "^3.3.1",
     "video-react": "^0.16.0",
+    "videojs-css": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
