--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
     "react-search-box": "^2.3.0",
+    "react-tabs": "^6.0.0",
     "redux": "^4.2.0",
     "style-loader": "^3.3.1",
     "video-react": "^0.16.0",
