--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^2.7.0",
+    "react-checklist": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
